--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <footer>
             <p>© 2024 Shashwath Gowda <br/>
                 +1 732-433-1127 <br/>
-                <a href="www.linkedin.com/in/shashwath-gowda-9697201a9">LinkedIn</a> <br/>
+                <a href="https://www.linkedin.com/in/shashwath-gowda-9697201a9/">LinkedIn</a> <br/>
                 <a href="https://github.com/ShashwathGowda">Git Hub</a>
             </p>
         </footer>
