--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="base">
             
             <img class="base_logo" src="./assets/images/base.png" />
-            <p>I approach my work with enthusiasm, professionalism, and a passionate dedication that reflects in my results. Actively pursuing learning and implementation with a focus on excellence, I proactively develop a profound understanding of diverse fields of study to enhance my contributions in any work environment. My approach, characterized by rapid and independent learning, ensures efficiency in handling tasks with precision and effectiveness.</p>
+            <p>Year of graduation: 2020 <br/> Gpa: 3.2 <br/> Major: Biology and science </p>
 
         </div>
 
         <div class="reva">
             <img class="reva_img" src="./assets/images/reva_logo.jpg" />
             <br>
-            <p>I approach my work with enthusiasm, professionalism, and a passionate dedication that reflects in my results. Actively pursuing learning and implementation with a focus on excellence, I proactively develop a profound understanding of diverse fields of study to enhance my contributions in any work environment. My approach, characterized by rapid and independent learning, ensures efficiency in handling tasks with precision and effectiveness.</p>
+            <p>Year of graduation: 2024 <br/> Gpa: 3.7 <br/> Major: Bioelectronics engineering </p>
         </div>
     
     </div>
