--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <div class="space-holder"> </div>
+    <div class="space-holder"></div>
     <div class="header-tab">
         <h1>Shashwath Gowda</h1>
         <h2>Bioelectronics Engineer</h2>
+    </div>
+    <div class="nav-tab">
+        <a href="https://www.linkedin.com/in/shashwath-gowda-9697201a9">LinkedIn</a> <br/>
+        <a href="https://github.com/ShashwathGowda">GitHub</a>
+        <a href="./docs/Shashwath_AI_Bio.pdf">Download Resume</a>
     </div>
     <div class="content">
         <div class="my_image">
@@ -121,8 +126,7 @@
             <hr/>
             <p>© 2024 Shashwath Gowda <br/>
                 +1 732-433-1127 <br/>
-                <a href="https://www.linkedin.com/in/shashwath-gowda-9697201a9">LinkedIn</a> <br/>
-                <a href="https://github.com/ShashwathGowda">GitHub</a>
+                
             </p>
         </footer>
     </div>
