--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="space-holder"></div>
     <div class="header-tab">
         <h1>Shashwath Gowda</h1>
-        <h2>Bioelectronics Engineer</h2>
+        <h2 id="bioelec" >Bioelectronics Engineer</h2>
     </div>
     <div class="nav-tab">
         <a href="https://www.linkedin.com/in/shashwath-gowda-9697201a9">LinkedIn</a> <br/>
