--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="space-holder"></div>
     <div class="header-tab">
         <h1>Shashwath Gowda</h1>
-        <h2 id="bioelec" >Bioelectronics Engineer</h2>
+        <h2 id="bioelec">Bioelectronics Engineer</h2>
     </div>
     <div class="nav-tab">
         <a href="https://www.linkedin.com/in/shashwath-gowda-9697201a9">LinkedIn</a> <br/>
@@ -40,11 +40,11 @@
     <div class="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h4><a href="./public/SENN.html">Self Evolving Neural Networks</a></h4>
+            <h4><a href="./public/SENN.html" class="proj">Self Evolving Neural Networks</a></h4>
             <p>We implemented the principles of Darwinism into the training and development of neural networks to produce a self-evolving neural network. Click on the link above to know more.</p>
         </div>
         <div class="project">
-            <h4><a href="./docs/Shashwath_Patent_grant.pdf">Smart pH Meter Patent</a></h4>
+            <h4><a href="./docs/Shashwath_Patent_grant.pdf" class="proj">Smart pH Meter Patent</a></h4>
             <p>We developed an automated pH meter designed to collect and load sample data live onto a cloud-based platform. Click on the link above to download the patent grant.</p>
         </div>
         <div class="project">
